<resources>
    <string name="app_name">SyntheticKnowledge</string>
    <string name="new_feed_title">New feed</string>
    <string name="profile_title">Profile</string>
    <string name="notifications_title">Notifications</string>
    <string name="options_title">Options</string>
    <string name="login_title">Login</string>
    <string name="under_login_titile">Please log in to continue…</string>
    <string name="username_hint_text">Username</string>
    <string name="password_hint_text">Password</string>
    <string name="login_submit_btn">Login</string>
    <string name="error_login">Wrong username or password</string>
    <string name="to_profile_btn"><big><b>%s</b></big>\n%s</string>
    <string name="to_profile_btn_text">View your profile</string>
    <string name="friend_list_op_btn">Friend List</string>
    <string name="reqest_friend_list_op_btn">Reqest friend list</string>
    <string name="log_out_op_btn">Log out</string>
    <string name="back_press_notification">Press back again to exit</string>
    <string name="image_btn">Image</string>
    <string name="write_status_btn">What are you thinking?</string>
    <string name="status_title">Create post</string>
    <string name="like_btn">Like</string>
    <string name="comment_btn">Comment</string>
    <string name="share_btn">Share</string>
    <string name="date_time_format">dd mon mm yea yy hh:mm </string>
    <string name="search_title">search</string>
    <string name="post_lb_btn">Post</string>
    <string name="search_label">Search</string>
    <string name="forgot_password_btn">Forgot password?</string>
    <string name="create_new_account_btn">Create new account</string>
    <string name="acronym_joker">J</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="under_signup_title">Don\'t have account? Don\'t worry create one</string>
    <string name="tv_on_continues_btn">We will help you create a new account after a few simple steps</string>
    <string name="continues_btn">Continues</string>
    <string name="create_full_name_title">Name</string>
    <string name="create_address_title">Address</string>
    <string name="create_birthday_title">BirthDay</string>
    <string name="create_gmail_title">Gmail</string>
    <string name="create_password_title">Password</string>
    <string name="create_phone_title">Phone</string>
    <string name="create_sex_title">Sex</string>
    <string name="create_username_title">Username</string>
    <string name="what_your_name_lb">What your name?</string>
    <string name="first_name_create_label">First Name</string>
    <string name="last_name_create_label">Last Name</string>
    <string name="next_str">Next</string>
    <string name="empty_first_name">First name cannot be empty</string>
    <string name="empty_last_name">Last name cannot be empty</string>
    <string name="day">Day</string>
    <string name="your_birthday_create_label">Your birthday?</string>
    <string name="year">Year</string>
    <string name="month">Month</string>
    <string name="your_sex_create_label">Your Sex?</string>
    <string name="male_sex">Male</string>
    <string name="famale_sex">Famale</string>
    <string name="your_address_label">Your address</string>
    <string name="adress_create_label">Adress</string>
    <string name="empty_address">Cannot be empty address</string>
    <string name="your_gmail_create">Your gmail?</string>
    <string name="gmail_create_label">Gmail</string>
    <string name="your_password_create">Your password?</string>
    <string name="password_create_label">Password</string>
    <string name="your_username_create">Your username?</string>
    <string name="your_phone_create">Your phone?</string>
    <string name="empty_gmail">Cannot be empty gmail</string>
    <string name="empty_phone">Cannot be empty phone</string>
    <string name="empty_username">Cannot be empty username</string>
    <string name="empty_password">Cannot be empty password</string>
    <string name="length_password">Password is only between 4 and 15 characters</string>
    <string name="length_username">Username is only between 4 and 15 characters</string>
</resources>
